# ChickenButt

./: .gitignore  DEPENDENCIES.md  HANDOFF.md  README.md  REPOSITORY_RECOVERY.md  STATUS_REPORT.md  app_settings.py  composer_geometry.py  conversation_store.py  dev.local.ChickenButt.desktop  io.github.scottonanski.ChickenButt.desktop  main.py  meson.build  message_widgets.py  ollama_client.py  ollama_health.py  release_info.py  requirements-notes.txt  run.sh  transcript_view.py  tray.py  window.py  x11_sidebar.py
.github/workflows/: tests.yml
data/: io.github.scottonanski.ChickenButt.desktop.in  io.github.scottonanski.ChickenButt.metainfo.xml.in
icons/hicolor/: index.theme
packaging/: chickenbutt.in
recovery-reports/: 00-initial-file-audit-discovery.md  README.md  REPOSITORY_RECOVERY.md
repository-refactor/: README.md  REFACTOR_PLAN.md
repository-refactor/evidence/: README.md
repository-refactor/evidence/window-audit-d12bf2e/: HEAD_FULL.txt  HEAD_SHORT.txt  MANIFEST-sha256.txt  gen-hashes.txt  out-hashes-test-logs.txt  out-hashes-top.txt  out-hashes-trace-json.txt  out-hashes-trace-logs.txt  window.py.sha256
repository-refactor/research/: 00-window-audit.md
scripts/: check_dependencies.py  generate-icons.py  install-desktop-entry.py  install-icons.py  smoke_gui.py  test_dependency_declaration.py  test_desktop_integration.py  test_generation_lifecycle.py  test_installed_layout.py  test_markdown_sanitization.py  test_message_actions.py  test_multichat.py  test_ollama_health.py  test_release_identity.py  test_restore_scroll.py  test_sidebar_interactions.py  test_stream_cancellation.py  test_web_content_security_policy.py  test_web_navigation_policy.py  test_wire_code_ui_batch.py
web/: app.css  app.js  index.html
